--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -52,9 +52,13 @@ body {
 
 #main-box {
     font-family: 'Poppins', sans-serif;
-    height: 2280px;
+    height: fit-content;
     width: 100%;
-    background-color: peru;
+    background: linear-gradient(to right, #00c6ff, #0072ff);
+
+    background: linear-gradient(to right, #56ccf2, #2f80ed);
+
+    background: linear-gradient(to right, #1d2b64, #f8cdda);
 }
 
 .home-content {
@@ -97,7 +101,7 @@ body {
 
 
 #section01 p {
-    color: black;
+    color: rgb(23, 16, 54);
     font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     opacity: 0;
@@ -116,10 +120,8 @@ body {
     color: #fafff7;
     text-align: center;
     font-weight: 600;
-    opacity: 0;
     animation: slideright 1s ease forwards;
     animation-delay: 1s;
-
 }
 
 #section02 {
@@ -128,7 +130,6 @@ body {
     flex-direction: column;
     height: auto;
     width: 100%;
-    background-color: #798fd4;
 }
 
 #section02 h2 {
@@ -152,6 +153,10 @@ body {
     margin-left: 14%;
 }
 
+#mySkills h3 {
+    color: wheat;
+}
+
 .bar {
     display: block;
     height: 25px;
@@ -172,13 +177,17 @@ body {
     justify-content: center;
     height: 680px;
     width: 100%;
-    background-color: #07374a;
+    background: linear-gradient(to right, #00c6ff, #0072ff);
+
+    background: linear-gradient(to right, #56ccf2, #2f80ed);
+
+    background: linear-gradient(to right, #1d2b64, #f8cdda);
+
 
 }
 
 #section04 {
     display: flex;
-    background-color: #5fafaf;
     flex-direction: column;
     justify-content: center;
     height: fit-content;
@@ -216,7 +225,7 @@ body {
 }
 
 .info p {
-    color: #07374a;
+    color: #ffff;
     font-family: cursive;
 }
 
@@ -231,19 +240,19 @@ body {
 #section03 h2 {
     margin: auto;
     margin-top: 40px;
-    color: #25b79f;
+    color: black;
 
 }
 
 .contact .mail {
-    color: #b6adad;
+    color: #221c1c;
     font-size: 2vw;
 
 }
 
 
 .contact .links {
-    color: #25b79f;
+    color: #141b1a;
     padding: 0.5rem;
     padding-bottom: 1.8rem;
     font-size: 1rem;
@@ -251,7 +260,7 @@ body {
 
 .contact a {
     text-decoration: none;
-    color: #25b79f;
+    color: #05050c;
     padding: 0.5rem;
     transition: .5s ease;
     opacity: 0;
@@ -263,7 +272,7 @@ body {
 }
 
 .contact a:hover {
-    color: black;
+    color: rgb(51, 7, 247);
 }
 
 .linkSize {
@@ -278,19 +287,20 @@ body {
     font-size: 50px;
 }
 
+
 /* Media Queries */
 
 
 @media screen and (max-width: 500px) {
 
     #main-box {
-        height: 2065px;
+        height: fit-content;
         width: fit-content;
     }
 
     .navbar-nav a {
         text-decoration: none;
-        color: linen;
+        color: black;
         font-size: 1rem;
         font-family: math;
         transition: .3s;
@@ -409,5 +419,128 @@ body {
     100% {
         transform: scale(1);
         opacity: 1;
+    }
+}
+
+.home-content {
+    text-align: center;
+    color: white;
+    margin-top: 10%;
+    width: 100%;
+}
+
+.home-content h4 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.8);
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+.home-content h1 {
+    font-size: 3.5rem;
+    font-weight: 700;
+    text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.5);
+    animation: slideIn 1s ease-in-out;
+}
+
+.home-content h3 {
+    font-size: 2.2rem;
+    font-weight: 500;
+    margin-top: 10px;
+}
+
+.Multiple-Text {
+    font-size: 2.5rem;
+    font-weight: bold;
+    animation: textColorChange 6s infinite alternate;
+}
+
+@keyframes textColorChange {
+    0% {
+        color: #ff7e5f;
+    }
+
+    25% {
+        color: #00c6ff;
+    }
+
+    50% {
+        color: #38ef7d;
+    }
+
+    75% {
+        color: #ff5e62;
+    }
+
+    100% {
+        color: #feb47b;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .home-content h4 {
+        font-size: 1.5rem;
+    }
+
+    .home-content h1 {
+        font-size: 2.8rem;
+    }
+
+    .home-content h3 {
+        font-size: 1.8rem;
+    }
+
+    .Multiple-Text {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .home-content {
+        width: 500px;
+    }
+
+    .home-content h4 {
+        font-size: 1.2rem;
+    }
+
+    .home-content h1 {
+        font-size: 2.2rem;
+    }
+
+    .home-content h3 {
+        font-size: 1.5rem;
+    }
+
+    .Multiple-Text {
+        font-size: 1.8rem;
     }
 }
