--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -102,8 +102,13 @@ body {
 
 #section01 p {
     color: rgb(23, 16, 54);
-    font-size: 18px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.6;
+    font-family: 'Poppins', sans-serif;
+    text-align: justify;
+    max-width: 80%;
+    margin: auto;
     opacity: 0;
     animation: slideleft 1s ease forwards;
     animation-delay: 1s;
@@ -313,6 +318,11 @@ body {
         flex-direction: column;
         height: 640px;
         width: 100%;
+    }
+
+    #section01 p {
+        font-size: 15px;
+        text-align: center;
     }
 
     #section01 img {
